# chatris

./: Cargo.toml  README.md  dtcannon.txt  field_example.txt  oneline.txt  plan.md  prompt.md
memo/: prompt.md  tmp.txt  プロンプト案.md  プロンプト案2.md
src/: cli.rs  game.rs  lib.rs  main.rs  next.rs  print_img.rs
