[package]
name = "chatris"
version = "0.1.0"
edition = "2021"
authors = ["namnium"]
description = "Chat based tetris game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
dialoguer = "0.11.0"
anyhow = "1.0.70"
image = "0.24.7"
imageproc = "0.23.0"
clap = { version = "4.4.11", features = ["derive"] }
